Updated special character

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ experience_content: | # this will include new lines to allow paragraphs
   <a href="https://www.ivu.com/" target="_blank">IVU Traffic Technologies</a>.
   - **2006-2012:** <font color="#2F4F4F"><b>BSc Computer Science.</b></font> 
   <a href="http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab" target="_blank">Universidad del Valle</a>. 
-  Advisor: <a href="http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe" target="_blank">Maria Trujillo</a>.
+  Advisor: <a href="http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe" target="_blank">Mar&#237;a Trujillo</a>.
   - **Spring 2012:** <font color="#2F4F4F"><b>Innovation Think Tank Participant.</b></font>
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
   - **Spring 2011:** <font color="#2F4F4F"><b>Research Intern.</b></font> 
