--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">Women in Computer Vision Workshop</a> to be 
   held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a>.
-  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping in the Challenging Environment* was accepted to 
+  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping* was accepted to 
   <a href="https://singapore20.oceansconference.org/" target="_blank">OCEANS 2020</a>.
   - **Nov. 2019:** I defended my PhD thesis, titled <a href="publications/theses/vargas2020_phd.pdf" target="_blank">Acoustic Source Localisation in Constrained Environments</a>. 
   Examiners: <a href="https://sites.google.com/site/abderrahimhalimi/" target="_blank">Abderrahim Halimi</a> (Heriot-Watt University) 
