--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ about_content: | # this will include new lines to allow paragraphs
 # News Section
 more_title: News
 more_content: | # this will include new lines to allow paragraphs
-  - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">Women in Computer Vision Workshop</a> to be 
-  held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow.
+  - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
+  held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping* was accepted to 
   <a href="https://singapore20.oceansconference.org/" target="_blank">OCEANS 2020</a>.
   - **Nov. 2019:** I defended my PhD thesis, titled <a href="publications/theses/vargas2020_phd.pdf" target="_blank">Acoustic Source Localisation in Constrained Environments</a>. 
@@ -105,7 +105,7 @@ projects_content: | # this will include new lines to allow paragraphs
   - **E. Vargas**, K. Brown, K. Subr, *Impact of Microphone Array Configurations on Robust 
   Indirect 3D Acoustic Source Localization*, in International Conference on Acoustics, 
   Speech and Signal Processing **(ICASSP)**, Calgary, Canada, April 2018. 
-  <span style="background-color:rgba(204, 236, 0, 0.4);"><b>Oral Presentation</b></span>
+  <span style="background-color:rgba(204, 236, 0, 0.6);"><b>Oral Presentation</b></span>
   <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">[pdf]</a> 
   <a href="publications/conferences/vargas2018_icassp.bib">[bib]</a>
   <a href="publications/conferences/vargas2018_icassp_slides.pdf" target="_blank">[slides]</a> 
