--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,8 @@ more_content: | # this will include new lines to allow paragraphs
   Slides <a href="publications/theses/vargas2020_phd_slides.pdf" target="_blank">here</a>.
   - **Oct. 2019:** I participated in the third <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> demonstrations. 
   Press release <a href="https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations" target="_blank">here</a>.
-  - **Jan. 2019:** I joined <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate.
+  - **Jan. 2019:** I joined <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, as part of the 
+  <a href="http://pro.hw.ac.uk/" target="_blank">Perception and Robotics</a> group. 
 
 # Timeline Section
 experience_title: Timeline
