--- a/_config.yml
+++ b/_config.yml
@@ -95,47 +95,47 @@ projects_content: | # this will include new lines to allow paragraphs
 
   <font size="4"><b>Conferences</b></font>
 
-  - **E. Vargas**, J. R. Hopgood, K. Brown, K. Subr, A Compressed Encoding Scheme for 
-  Approximate TDOA Estimation, in European Signal Processing Conference **(EUSIPCO)**, 
+  - **E. Vargas**, J. R. Hopgood, K. Brown, K. Subr, **A Compressed Encoding Scheme for 
+  Approximate TDOA Estimation**, in European Signal Processing Conference (EUSIPCO), 
   Rome, Italy, September 2018. 
   <a href="publications/conferences/vargas2018_eusipco.pdf" target="_blank">[pdf]</a>
   <a href="publications/conferences/vargas2018_eusipco.bib">[bib]</a>
   <a href="publications/conferences/vargas2018_eusipco_slides.pdf" target="_blank">[slides]</a>
 
-  - **E. Vargas**, K. Brown, K. Subr, *Impact of Microphone Array Configurations on Robust 
-  Indirect 3D Acoustic Source Localization*, in International Conference on Acoustics, 
+  - **E. Vargas**, K. Brown, K. Subr, Impact of Microphone Array Configurations on Robust 
+  Indirect 3D Acoustic Source Localization, in International Conference on Acoustics, 
   Speech and Signal Processing **(ICASSP)**, Calgary, Canada, April 2018.
   <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">[pdf]</a> 
   <a href="publications/conferences/vargas2018_icassp.bib">[bib]</a>
   <a href="publications/conferences/vargas2018_icassp_slides.pdf" target="_blank">[slides]</a> 
 
-  - C. Bustos, **E. Vargas**, M. Trujillo, *Classifying Estimated Stereo Correspondences 
-  based on Delaunay Triangulation*, in IberoAmerican Congress on Pattern Recognition 
+  - C. Bustos, **E. Vargas**, M. Trujillo, Classifying Estimated Stereo Correspondences 
+  based on Delaunay Triangulation, in IberoAmerican Congress on Pattern Recognition 
   **(CIARP)**, Lima, Peru, November 2016.
   <a href="publications/conferences/bustos2016_ciarp.pdf" target="_blank">[pdf]</a> 
   <a href="publications/conferences/bustos2016_ciarp.bib">[bib]</a>
 
-  - **E. Vargas**, M. Trujillo, *A Corresponding Points Classification Approach by Delaunay 
-  Triangulation*, in Latin American Conference on Networked and Electronic Media 
+  - **E. Vargas**, M. Trujillo, A Corresponding Points Classification Approach by Delaunay 
+  Triangulation, in Latin American Conference on Networked and Electronic Media 
   **(LACNEM)**, Santiago, Chile, October 2012.
   <a href="publications/conferences/vargas2012_lacnem.pdf" target="_blank">[pdf]</a> 
   <a href="publications/conferences/vargas2012_lacnem.bib">[bib]</a>
 
   <font size="4"><b>Theses</b></font>
 
-  - **E. Vargas**, *Acoustic Source Localisation in Constrained Environments*, PhD Thesis, 
+  - **E. Vargas**, Acoustic Source Localisation in Constrained Environments, PhD Thesis, 
   Heriot-Watt University, Edinburgh, United Kingdom, February 2020. 
   <a href="publications/theses/vargas2020_phd.pdf" target="_blank">[pdf]</a> 
   <a href="publications/theses/vargas2020_phd.bib">[bib]</a> 
   <a href="publications/theses/vargas2020_phd_slides.pdf" target="_blank">[slides]</a> 
 
-  - **E. Vargas**, *Texture Enhanced Tissue Analysis*, MSc Thesis, Erasmus Mundus Masters in 
+  - **E. Vargas**, Texture Enhanced Tissue Analysis, MSc Thesis, Erasmus Mundus Masters in 
   Vision and Robotics, Edinburgh, United Kingdom, June 2015.
   <a href="publications/theses/vargas2015_msc.pdf" target="_blank">[pdf]</a> 
   <a href="publications/theses/vargas2015_msc.bib">[bib]</a> 
   <a href="publications/theses/vargas2015_msc_slides.pdf" target="_blank">[slides]</a>
 
-  - **E. Vargas**, *Classifying Estimated Corresponding Points by Delaunay Triangulation*, 
+  - **E. Vargas**, Classifying Estimated Corresponding Points by Delaunay Triangulation, 
   BSc Thesis, Universidad del Valle, Cali, Colombia, June 2012.
   <a href="publications/theses/vargas2012_bsc.pdf" target="_blank">[pdf]</a> 
   <a href="publications/theses/vargas2012_bsc.bib">[bib]</a> 
