--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,10 @@ about_content: | # this will include new lines to allow paragraphs
   I am currently a Research Associate at <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> working on computer vision for underwater robots. I obtained my PhD in Signal 
   Processing from <a href="https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm" target="_blank">Heriot-Watt University</a> and my 
   Master's degree in Computer Vision and Robotics via an Erasmus Mundus Master Programme called <a href="https://www.vibot.org/" target="_blank">VIBOT</a>, awarded by the 
-  *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my Bachelor's degree in computer science from 
+  <a href="https://en.u-bourgogne.fr/" target="_blank">University of Burgundy</a>, 
+  <a href="http://www.udg.edu/en/" target="_blank">University of Girona</a> and 
+  <a href="https://www.hw.ac.uk/" target="_blank">Heriot-Watt University</a>. 
+  I received my Bachelor's degree in computer science from 
   <a href="http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab" target="_blank">Universidad del Valle</a>. During my studies, I have also spent time as a research intern 
   at <a href="https://research.eu.medical.canon/" target="_blank">Toshiba Medical Visualization Systems</a> and 
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
