--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
   held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.
-  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping* has been accepted to 
+  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping* was accepted to 
   <a href="https://singapore20.oceansconference.org/" target="_blank">OCEANS 2020</a>.
   - **Nov. 2019:** I defended my PhD thesis, titled <a href="publications/theses/vargas2020_phd.pdf" target="_blank">Acoustic Source Localisation in Constrained Environments</a>. 
   Examiners: <a href="https://sites.google.com/site/abderrahimhalimi/" target="_blank">Abderrahim Halimi</a> (Heriot-Watt University) 
@@ -62,14 +62,15 @@ more_content: | # this will include new lines to allow paragraphs
   Press release <a href="https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations" target="_blank">here</a>.
   - **Jan. 2019:** I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and member of the 
   <a href="http://pro.hw.ac.uk/" target="_blank">Perception and RObotics (PRO)</a> group. 
-  - **Jul. 2018:** I participated in the <a href="http://grammars.grlmc.com/DeepLearn2018/" target="_blank">2<sup>nd</sup> International Summer School on Deep Learning 2018</a> 
+  - **Jul. 2018:** I attended the <a href="http://grammars.grlmc.com/DeepLearn2018/" target="_blank">2<sup>nd</sup> International Summer School on Deep Learning 2018</a> 
   in Genoa, Italy.
   - **May. 2018:** Our paper <a href="publications/conferences/vargas2018_eusipco.pdf" target="_blank">A Compressed Encoding Scheme for Approximate TDOA Estimation</a> has been
   accepted to <a href="http://www.eusipco2018.org/" target="_blank">EUSIPCO 2018</a>.
-  - **Apr. 2018:**
+  - **Apr. 2018:** I was a student helper in the <a href="https://robotical.io/" target="_blank">Marty: Activate!</a> workshop, as part of the 
+  <a href="https://www.sciencefestival.co.uk/" target="_blank">Edinburgh Science Festival</a>.
   - **Jan. 2018:** Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Array Configurations on Robust 
   Indirect 3D Acoustic Source Localization</a> has been accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.
-  - **Jan. 2018:**
+  - **Jan. 2018:** I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>. 
 
 # Timeline Section
 experience_title: Timeline
