--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,8 @@ more_content: | # this will include new lines to allow paragraphs
   <a href="https://www.sciencefestival.co.uk/" target="_blank">Edinburgh Science Festival</a>.
   - **Jan. 2018:** Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Array Configurations on Robust 
   Indirect 3D Acoustic Source Localization</a> has been accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.
-  - **Jan. 2018:** I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>. 
+  - **Jan. 2018:** I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>
+  in Edinburgh, United Kingdom. 
 
 # Timeline Section
 experience_title: Timeline
