--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ more_content: | # this will include new lines to allow paragraphs
   accepted to <a href="http://www.eusipco2018.org/" target="_blank">EUSIPCO 2018</a>.
   - **Apr. 2018:** I was a student helper in the <a href="https://robotical.io/" target="_blank">Marty: Activate!</a> workshop, as part of the 
   <a href="https://www.sciencefestival.co.uk/" target="_blank">Edinburgh Science Festival</a>.  
-  - **Jan. 2018:** Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Array Configurations on Acoustic Source Localization</a> has been accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.
+  - **Jan. 2018:** Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Array Configurations on Acoustic Localization</a> has been accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.
   - **Jan. 2018:** I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>
   in Edinburgh, United Kingdom. 
 
