--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,13 @@ about_content: | # this will include new lines to allow paragraphs
 # News Section
 more_title: News
 more_content: | # this will include new lines to allow paragraphs
+  <table style="width:100%">
+   <tr>
+      <td>**Feb. 2020:**</td>
+      <td>I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
+  held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.</td>
+    </tr>
+  </table>
   - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
   held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract Image Enhancement for Underwater 3D Mapping has been accepted to 
