--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:50px"><b>Jul. 2018</b></td>
-      <td> attended the <a href="http://grammars.grlmc.com/DeepLearn2018/" target="_blank">2<sup>nd</sup> International Summer School on Deep Learning 2018</a> 
+      <td>I attended the <a href="http://grammars.grlmc.com/DeepLearn2018/" target="_blank">2<sup>nd</sup> International Summer School on Deep Learning 2018</a> 
   in Genoa, Italy.</td>
   </tr>
 
