--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ more_title: News
 more_content: | # this will include new lines to allow paragraphs
   <table>
   <tr>
-      <td style="width:100px"><b>Feb 2020</b></td>
+      <td style="width:100px"><b>Feb. 2020</b></td>
       <td>I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
   held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.</td>
   </tr>
